counter-app/app/Project/frontend/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend # Name des Deployments
  labels:
    app: counter-frontend
spec:
  replicas: 1  # Mindestens 1 Replica
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
      - name: counter-frontend # Name des Containers
        image: ghcr.io/aledog007/counter-frontend:v1 # Kein 'latest'!
        ports:
        - containerPort: 8080
