counter-app/app/Project/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: counter-frontend
  sessionAffinity: None
  type: ClusterIP
