counter-app/app/Project/frontend/frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
